--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -68,9 +68,14 @@
           <%= link_to "Edit", edit_booking_path(booking), class: "card-link btn btn-primary"%>
           <%= link_to "Cancel", booking_path(booking), method: :delete,  class: "card-link btn btn-primary"%>
         <% end %>
+        <% if booking.status == 'accepted' %>
+        <%= link_to "add a review", new_booking_bookings_review_path(booking), class: "card-link btn btn-primary" unless booking.bookings_review %>
+        <% end %>
       </div>
     </div>
   <% end %>
+
+
 
 
   <h2>Requests</h2>
