--- a/app/views/fams/index.html.erb
+++ b/app/views/fams/index.html.erb
@@ -1,5 +1,7 @@
+<div class="polaroid-true">
 <div class="d-flex">
   <div class="col-8">
+
     <div class="container text-center pt-5">
       <h1>Find the perfect Family for you!</h1>
       <p>We found <%= @fams.length %> families to rent</p>
@@ -14,12 +16,14 @@
             <% else %>
               <%= image_tag "default_family.jpg" %>
             <% end %>
+
             <div class="caption pt-2">
               <h5><%= fam.name %></h5>
               <!-- <i class="fas fa-globe-americas"> -->
               <p></i> <%= fam.cultural_experience %></p>
               <p class="text-right m-0"><%= fam.price %> €/night</p>
             </div>
+
           </div>
         <% end %>
 
@@ -47,4 +51,5 @@
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
   </div>
+</div>
 </div>
