--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -28,8 +28,9 @@
   padding-top: 16px;
 }
 
+
 .family-header {
-  margin-left: 8px;
+  margin-left: 60px;
   margin-top: 40px;
   font-size: 32px;
 }
@@ -42,7 +43,13 @@
 }
 
 .family-links {
-  margin-left: 60px;
+  text-align: right;
+
+}
+
+.card-img-top {
+  height: 150px;
+  object-fit: cover;
 }
 
 
