--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,8 +12,9 @@
         <%= f.input    :last_name,
         required: true,
         autofocus: true%>
-        <%= f.input :language, collection: User::LANGUAGES,
-        required:false %>
+        <%= f.input :language, collection: User::LANGUAGES, input_html: { multiple: true },
+        required:false
+        %>
         <%= f.input  :description,
         required:true,
         autofocus:true %>
