--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -26,7 +26,7 @@
       <div class="d-flex align-items-center">
         <h1 class= "family-header">Family</h1>
         <div class="family-links mt-4 pl-4">
-          <%= link_to fam_path(@profile.fams[0]), method: :delete, data: { confirm: 'Are you sure?' } do %>
+          <%= link_to fam_path(@profile.fams), method: :delete, data: { confirm: 'Are you sure?' } do %>
           <i class="far fa-trash-alt mt-2"></i>
           <% end %>
         </div>
