change background color

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,11 +2,11 @@
 
 $blue: #1E2937;
 $orange: #F2A095;
+$green: #c7dcc382;
 
 
 // For example:
 $red: #FD1015;
 $yellow: #FFC65A;
-$green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
