--- a/app/views/fams/index.html.erb
+++ b/app/views/fams/index.html.erb
@@ -31,11 +31,11 @@
   </div>
 
 
-    <div class="col-4">
+    <div class="map-box col-4" style="align">
       <div
       id="map"
       style="width: 100%;
-      height: 600px;"
+      height: 100vh;"
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
       ></div>
