--- a/app/views/fams/show.html.erb
+++ b/app/views/fams/show.html.erb
@@ -35,8 +35,9 @@
         <h5>Book your stay with us!</h5>
           <%= simple_form_for([@fam, @booking]) do |f| %>
             <%= f.input :number_of_guests  %>
-            <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-            <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+            <%= f.input :start_date, as: :string, input_html: { class: "datepicker", id: "range_start" } %>
+            <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker", id: "range_end"} %>
+            <p><strong>Total:  <%= @fam.price %> €</strong></p>
             <%= f.button :submit, "Book this family", class: "btn btn-primary" %>
           <% end %>
       </div>
