--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -61,3 +61,20 @@
   color: white;
 }
 
+
+.btn-flat-profile {
+  color: white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  background: $blue;
+  transition: background 0.3s ease;
+  margin-top: 10px;
+  font-size: 8px;
+    height: 19px;
+    text-align: center;
+    padding: 3px;
+    width: 40px;
+}
+
+
+
