--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -36,56 +36,6 @@
 
 
 
-// .cards {
-//   display: grid;
-//   grid-template-columns: 1fr 1fr 1fr;
-//   grid-gap: 10px;
-//   margin: 15px;
-// }
-
-// .card-family {
-//   overflow: hidden;
-//   background: white;
-//   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-//   border-radius: 8px;
-// }
-
-// .card-family-image {
-//   height: 120px;
-//   width: 100%;
-//   object-fit: cover;
-// }
-
-// .card-family h2 {
-//   font-size: 16px;
-//   font-weight: bold;
-//   margin: 0;
-// }
-
-// .card-family p {
-//   font-size: 12px;
-//   opacity: .7;
-//   margin: 0;
-// }
-
-
-// .card-family .card-family-info {
-//   text-align: left;
-//   padding: 16px;
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: flex-end;
-//   position: relative;
-// }
-
-// .card-family .card-family-pricing {
-//   // text-align: right;
-//   position: absolute;
-//   right: 16px;
-//   top: -20px;
-//   width: 40px;
-// }
-
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
@@ -149,13 +99,32 @@
 .container {
 }
 
+//scss profile#show
+.card-booking-details {
+  background-color: #ffffff7a;
+  margin-top: -2px;
+  padding: 10px;
+  border-radius: 8px;
+  color: $blue;
+  text-align: left;
+  margin-left: 20px;
+  padding-bottom: 16px;
+  padding-top: 20px;
+
+}
+
+
 .card-product {
   overflow: hidden;
   height: 120px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
-  align-items: center;
+  align-items: left;
+  width: 480px;
+  text-align: left;
+  margin: auto;
+  margin-top: 10px;
 }
 
 .card-product img {
@@ -175,9 +144,25 @@
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
-  margin-top: 8px;
+  margin-top: 3px;
+}
+
+.card-product-infos {
+  padding-top: 8px;
 }
 
 .card-product .card-product-infos {
   padding: 16px;
+  padding-top: 3px;
+}
+
+.card-booking-details h2 {
+  padding-top: 5px;
+}
+
+.requests-box {
+  border: 2px solid $white;
+  padding: 20px;
+  border-radius: 8px;
+  margin-right: 20px;
 }
