--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,4 @@
 <div class="profile-page">
-
   <div class="row">
     <div class="col-6">
       <h1 class= "profile-header">Profile</h1>
@@ -21,130 +20,93 @@
         </div>
       </div>
     </div>
-
     <div class= "col-6">
       <div class="d-flex align-items-center">
         <h1 class= "family-header">Family</h1>
         <div class="family-links mt-4 pl-4">
-          <%= link_to fam_path(@profile.fams[0]), method: :delete, data: { confirm: 'Are you sure?' } do %>
+          <%= link_to fam_path(@profile.fams), method: :delete, data: { confirm: 'Are you sure?' } do %>
           <i class="far fa-trash-alt mt-2"></i>
           <% end %>
         </div>
       </div>
-
       <% @profile.fams.each do |fam| %>
       <%= link_to fam_path(fam) do %>
       <div class="d-flex">
         <div class="family-profile">
           <%= cl_image_tag fam.pictures.first.photo, class: "card-img-top" %>
-          <div class="family-title"><%= fam.name %>
-            <% if policy(@profile).update? %>
+          <div class="family-title">
+            <%= fam.name %>
+          </div>
+        </div>
+      </div>
+      <% end %>
+      <% end %>
+    </div>
+  </div>
+
+
+  <div class="row">
+    <div class="container-details col-6 py-5">
+      <div class="card-booking-details text-center">
+        <div>
+          <% if current_user == @profile %>
+          <h2>My Bookings</h2>
+          <% @profile.bookings.each do |booking| %>
+          <% booked_fam = booking.fam %>
+          <%= link_to booking_path(booking) do %>
+          <div class="card-product">
+            <% if !booked_fam.pictures.empty? %>
+            <%= cl_image_tag booked_fam.pictures.first.photo  %>
+            <% else %>
+            <%= image_tag 'default_family' %>
+            <% end %>
+            <div class="card-product-infos">
+              <h2><%= booked_fam.name %> <% user = User.find(booked_fam.user_id) %> <small> by <%= link_to user.first_name, profile_path(user) %> </small></h2>
+              <% if booking.status == "pending" %>
+              <p>Pending <i class="far fa-clock"></i></p>
+              <% elsif booking.status == "accepted" %>
+              <p>Confirmed <i class="far fa-check-circle"></i></p>
+              <% else %>
+              Declined
+              <% end %>
+              <p><%= booked_fam.cultural_experience %></p>
+              <p><strong><%= booked_fam.price %> €/night </strong></p>
+              <% if policy(@profile).update? && booking.status != "declined" %>
+              <%= link_to "Edit", edit_booking_path(booking), class: "card-link btn btn-flat-profile"%>
+              <%= link_to "Cancel", booking_path(booking), method: :delete,  class: "card-link btn btn-flat-profile ml-0"%>
+              <% end %>
+              <% if booking.status == 'accepted' %>
+              <%= link_to "add a review", new_booking_bookings_review_path(booking), class: "card-link btn btn-flat-profile ml-0" unless booking.bookings_review %>
+              <% end %>
+            </div>
           </div>
           <% end %>
+          <% end %>
+          <% end %>
         </div>
       </div>
     </div>
-    <% end %>
-    <% end %>
 
-  </div>
-
-
-</div>
-</div>
-
-
-
-<div class="card-product">
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-  <div class="card-product-infos">
-    <h2>Product name</h2>
-    <p>Product description with <strong>relevant info</strong> only.</p>
-  </div>
-</div>
-
-
-<div class="row">
-  <div class="container-details col-6 py-5">
-    <div class="card-details text-center">
-
-      <div>
-      <% if current_user == @profile %>
-        <h2>My Bookings</h2>
-        <% @profile.bookings.each do |booking| %>
-          <% booked_fam = booking.fam %>
-          <%= link_to booking_path(booking) do%>
-            <div class="card" style="width: 30rem;">
-              <% booked_fam.pictures.each do |picture| %>
-                <%= cl_image_tag picture.photo, class: "card-img-top" %>
-              <% end %>
-              <div class="card-body">
-                <h5 class="card-title"><%= booked_fam.name %></h5>
-                <% user = User.find(booked_fam.user_id)  %>
-                <p class="card-text"><%= link_to user.first_name, profile_path(user) %></p>
-                <% if booking.status == "pending" %>
-                  <p class="card-text">Pending <i class="far fa-clock"></i></p>
-                <% elsif booking.status == "accepted" %>
-                  <p class="card-text">Confirmed <i class="far fa-check-circle"></i></p>
-                <% else %>
-                  <p class="card-text">Declined <i class="far fa-times-circle"></i></p>
-                <% end %>
-                  <p class="card-text"><%= booked_fam.cultural_experience %></p>
-                  <h5 class="card-text"><%= booked_fam.price %> €/night</h5>
-              </div>
-              <div class="card-body">
-                <% if policy(@profile).update? %> <% unless booking.status == "declined" %>
-                  <%= link_to "Edit", edit_booking_path(booking), class: "card-link btn btn-primary"%>
-                  <%= link_to "Cancel", booking_path(booking), method: :delete,  class: "card-link btn btn-primary"%>
-                <% end %><% end %>
-                <% if booking.status == 'accepted' %>
-                <%= link_to "add a review", new_booking_bookings_review_path(booking), class: "card-link btn btn-primary" unless booking.bookings_review %>
-                <% end %>
-              </div>
-            </div>
-          <% end %>
+  <div class="col-6">
+    <div class="requests-box my-5" align="center">
+      <h2>Requests</h2>
+        <% my_fam = @profile.fams.each do |fam| %>
+          <div>
+            <% fam.bookings.each do |book| %>
+              <% unless book.status == "declined" %>
+              <% user = User.find(book.user_id) %>
+              <p><%= link_to user.first_name, profile_path(user) %> wants to book your family</p>
+              <p>From: <%= book.start_date %></p>
+              <p>To: <%= book.end_date %></p>
+              <%= link_to "Show", booking_path(book), class: "card-link btn btn-primary" %>
+            <% end %>
         <% end %>
-
-
-
-    <div class="col-6">
-      <div class="booking-box my-5" align="center">
-         <h2>Requests</h2>
-          <% my_fam = @profile.fams.each do |fam| %>
-            <div>
-              <% fam.bookings.each do |book| %>
-                <% unless book.status == "declined" %>
-                  <% user = User.find(book.user_id) %>
-                  <p><%= link_to user.first_name, profile_path(user) %> wants to book your family</p>
-                  <p>From: <%= book.start_date %></p>
-                  <p>To: <%= book.end_date %></p>
-                  <%= link_to "Show", booking_path(book), class: "card-link btn btn-primary" %>
-                <% end %>
-              <% end %>
-            </div>
-          <% end %>
-        <% end %>
-        </div>
-
-      </div>
+          </div>
     </div>
-
-
-      </div>
-    </div>
+     <% end %>
+  </div>
   </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 
