--- a/app/views/fams/show.html.erb
+++ b/app/views/fams/show.html.erb
@@ -36,7 +36,7 @@
       <div class="booking-box my-5" align="center">
         <h5>Book your stay with us!</h5>
           <%= simple_form_for([@fam, @booking]) do |f| %>
-            <%= f.input :number_of_guests  %>
+            <%= f.input :number_of_guests, input_html: { min: '0', step: 'any' }  %>
             <%= f.input :start_date, as: :string, input_html: { class: "datepicker", id: "range_start" } %>
             <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker", id: "range_end"} %>
             <p><strong>Total:  <%= @fam.price %> €</strong></p>
