fixed some styling issues with the map

--- a/app/assets/stylesheets/components/_polaroids.scss
+++ b/app/assets/stylesheets/components/_polaroids.scss
@@ -23,6 +23,12 @@
   text-decoration: none;
   color: $blue;
 }
+
+.caption > h5 {
+  font-family: 'Shadows Into Light Two', cursive;
+  font-size: 24px;
+}
+
 .item {
   width: 30%;
   display: inline-block;
