--- a/app/views/fams/_infowindow.html.erb
+++ b/app/views/fams/_infowindow.html.erb
@@ -1,2 +1,4 @@
-<h2><%= fam.name %></h2>
-<p><%= fam.location %></p>
+<div class="polaroid">
+  <h6 style="font-family: 'Shadows Into Light Two', cursive;"><%= fam.name %></h6>
+  <p><%= fam.location %></p>
+</div>
