--- a/app/views/fams/index.html.erb
+++ b/app/views/fams/index.html.erb
@@ -18,7 +18,7 @@
               <%= image_tag "default_family.jpg" %>
             <% end %>
             <div class="caption pt-2">
-              <h5><%= fam.name %></h5>
+              <h5>The <%= fam.name %></h5>
               <!-- <i class="fas fa-globe-americas"> -->
               <p></i> <%= fam.cultural_experience %></p>
               <p class="text-right m-0"><%= fam.price %> €/night</p>
@@ -31,7 +31,7 @@
   </div>
 
 
-    <div class="map-box col-4" style="align">
+    <div class="map-box col-4 py-5">
       <div
       id="map"
       style="width: 100%;
