Reviews displaying nicely

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,11 +1,11 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-4">
+<div class="container m-5">
+  <h1>Test</h1>
+  <div class="col-6 text-center">
+    <h1>How did you enjoy your experience?</h1>
       <%= simple_form_for [@booking,review] do |f| %>
         <%= f.input :description %>
         <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience" %>
         <%= f.submit "Leave some love", class: "btn-flat" %>
       <% end %>
-    </div>
   </div>
 </div>
