--- a/app/views/bookings_reviews/new.html.erb
+++ b/app/views/bookings_reviews/new.html.erb
@@ -1,11 +1,14 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-4">
-      <%= simple_form_for [@booking,@booking_review] do |f| %>
-        <%= f.input :content %>
-        <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience" %>
-        <%= f.submit "Leave some love", class: "btn-flat" %>
-      <% end %>
+  <div class="row justify-content-center">
+    <div class="col-6 m-5">
+      <div class="requests-box my-5 p-5" align="center">
+        <h1>How did you enjoy the Family Time?</h1>
+        <%= simple_form_for [@booking,@booking_review] do |f| %>
+        <%= f.input :content, class: "input"%>
+        <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience", class: "input" %>
+        <%= f.submit "Leave some love", class: "btn-flat align-item-center" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
