--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -3,8 +3,8 @@
 <div class="container">
   <div class="form-wrapper" style="width: 400px; margin: 0 auto;">
 <%= simple_form_for([@fam, @booking]) do |f| %>
-<%= f.input :number_of_guests  %>
- <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-      <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-      <%= f.button :submit, "Confirm", class: "btn btn-primary" %>
+  <%= f.input :number_of_guests  %>
+  <%= f.input :start_date, as: :string, input_html: { class: "datepicker", id: "range_start" } %>
+  <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker", id: "range_end"} %>
+  <%= f.button :submit, "Confirm", class: "btn btn-primary" %>
 <% end %>
