--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,23 +1,10 @@
 <div class="container">
   <div class = "container col-6 my-5 text-center">
-    <h2>Booking successfully</h2>
+    <h2>Booking <%= @booking.status %></h2>
     <br>
     <p><strong>From: </strong><%= @booking.start_date.strftime("%b %d, %Y") %></p>
     <p><strong>To:</strong> <%= @booking.end_date.strftime("%b %d, %Y") %></p>
     <p>(<%= ((@booking.end_date - @booking.start_date)/86400).to_i %> days)</p>
-    <p><strong>Number of guests: </strong><%= @booking.number_of_guests %></p>
-    <p> <strong>Status of the booking:</strong> <%= @booking.status %></p>
-
-    <% if @booking.fam.user == current_user %>
-      <% if @booking.status == 'accepted' %>
-        <%= link_to 'Cancel', decline_path(@booking), class: "btn btn-primary"%>
-      <% elsif @booking.status == 'declined' %>
-        <%= link_to 'Accept', accept_path(@booking), class: "btn btn-primary"%>
-      <% else %>
-        <%= link_to 'Accept', accept_path(@booking), class: "btn btn-primary"%>
-        <%= link_to 'Decline', decline_path(@booking), class: "btn btn-primary"%>
-      <% end %>
-    <% end %>
-    <img src="https://media2.giphy.com/media/VzQ9PUdifClRm/giphy.gif" alt="Friends">
+    <%= link_to "Back", profile_path(@booking.user), class: "card-link btn btn-flat" %>
   </div>
 </div>
