--- a/app/views/fams/show.html.erb
+++ b/app/views/fams/show.html.erb
@@ -18,7 +18,7 @@
     <div class="row">
 
       <div class="container-details col-6 py-5">
-        <div class="card-details text-center">
+        <div class="card-details text-center" style="height: 417px;">
         <h1>We are the <%= @fam.name %></h1>
         <h4>Come and stay with us!</h4>
         <br>
@@ -39,7 +39,7 @@
             <%= f.input :number_of_guests, input_html: { min: '0', step: 'any' }  %>
             <%= f.input :start_date, as: :string, input_html: { class: "datepicker", id: "range_start" } %>
             <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker", id: "range_end"} %>
-            <p><strong>Total:  <%= @fam.price %> €</strong></p>
+            <p><strong>Price per night:  <%= @fam.price %> €</strong></p>
             <%= f.button :submit, "Book this family", class: "btn btn-primary" %>
           <% end %>
       </div>
