--- a/app/assets/stylesheets/components/_signupfamily.scss
+++ b/app/assets/stylesheets/components/_signupfamily.scss
@@ -19,8 +19,8 @@
   top:0;
   background-position: center;
   background-size: cover;
-  height: 86vh;
-  margin-top: 21px;
+  height: 90vh;
+  // margin-top: 21px;
 }
 
 .row-family {
