--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,12 +3,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 80px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   height: 45px;
   font-size: 12px;
   flex-shrink: 0;
+  bottom: 0px;
+  margin-bottom: 0px;
 }
 .footer-links {
   display: flex;
