--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -6,7 +6,8 @@
       <br>
       <p><strong>From: </strong><%= @booking.start_date.strftime("%b %d, %Y") %></p>
       <p><strong>To:</strong> <%= @booking.end_date.strftime("%b %d, %Y") %></p>
-      <p>(<%= ((@booking.end_date - @booking.start_date)/86400).to_i %> days)</p>
+      <% day = ((@booking.end_date - @booking.start_date)/86400).to_i %>
+      <p><strong><%= day * @booking.fam.price %> € / <%= pluralize day, "night" %></strong></p>
       <%= link_to "Back", profile_path(@booking.user), class: "card-link btn btn-flat" %>
     </div>
   </div>
